Add additional methods to tools and update XCode project for XCode 4.  Note that the Boost headers are now required for OmnisTools.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # Build Directory
-proj/Mac/build/*
+proj/Mac/*.xcodeproj/xcuserdata
 proj/Windows/build/*
 proj/Windows/build/debug/*
 deploy/*
 
+*.xcworkspace
 *.pbxuser
 *.mode1v3
 *.user
